--- a/style.css
+++ b/style.css
@@ -1,6 +1,171 @@
 *{
     font-family: 'Montserrat', sans-serif;
-    font-size: 30px;
+    margin: 0;
+	padding: 0;
     scroll-behavior: smooth;
 }
 
+body {
+    background: #c5c8cf;
+}
+
+.contenedor{
+    width: 90%;
+    max-width: 1300px;
+    height: 100vh;
+	margin: 10px auto;
+    display: grid;
+    
+    grid-template-areas:    "header header header"
+                            "sidebar contenido contenido"
+                            "footer footer footer";
+    gap: 20px;
+
+    justify-content: center;
+    text-align: center;
+    grid-auto-columns: 1fr 5fr 5fr;
+    grid-auto-rows: 1fr 10fr 1fr;
+
+}
+
+.indice {
+    background: #fAA43D;
+    grid-area: sidebar;
+    position: fixed;
+    left: 0px;
+    height: 100%;
+    width: 200px;
+    align-items: top;
+    padding: 20px;
+    min-width: 50px;
+    justify-content: center;
+    border-radius: 10px;
+    top: 100px;
+}
+
+.indice__elemento:hover {
+    transform: scale(1.1);
+    color: #ffffff;
+    background-color: #ec913c;
+    transition: 0.3s;
+}
+
+.footer {
+    background-color: rgb(247, 175, 175);
+    grid-area: footer;
+    position: fixed;
+    bottom: 0px;
+    padding: 30px;
+    border-radius: 10px;
+    width: 100%;
+    right: 0;
+}
+
+.texto {
+    grid-area: contenido;
+    display: grid;
+    gap: 20px;
+    padding: 20px;
+    height: 500px;
+    min-width: 500px;
+    font-size: 30px;
+}
+
+.texto h3 {
+    padding: 30px;
+    font-size: 40px;
+    font-weight: bold;
+    color: #654392;
+}
+
+.texto__contenedor p {
+    color: rgb(90, 90, 86);
+    font-size: 20px;
+    padding-bottom: 20px;
+}
+
+.texto__contenedor h5 {
+    color: rgb(53, 53, 51);
+    font-size: 20px;
+}
+
+.texto__contenedor ul{
+    color: rgb(90, 90, 86);
+    font-size: 20px;
+    padding-bottom: 15px;
+    text-align: left;
+}
+
+.texto__contenedor ol{
+    color: rgb(90, 90, 86);
+    font-size: 20px;
+    padding-bottom: 15px;
+    text-align: left;
+}
+
+.texto__contenedor ol li{
+    padding: 10px;
+}
+
+.texto__contenedor ul li{
+    padding: 10px;
+}
+
+.texto__contenedor {
+    background-color: rgb(255, 255, 255);
+    width: 100%;
+    border-radius: 15px;
+    padding: 40px;
+    padding-top: 80px;
+    padding-bottom: 80px;
+    box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.384);
+}
+
+.texto__contenedor h4 {
+    padding: 20px;
+    color: #3c74ec;
+    border-top: 2px solid rgb(28, 40, 41);
+}
+
+.indice__titulo {
+    display: block;
+    border-bottom: 1px solid rgb(59, 47, 45);
+}
+
+.indice__lista {
+    display: block;
+}
+
+.indice__elemento {
+    padding: 5px;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.indice__elemento a {
+    text-decoration:none;
+}
+
+.indice__elemento a:visited {
+    text-decoration:none;
+}
+
+.indice__elemento a:active {
+    color: #12203E;
+}
+
+.titulo {
+    background: #12203E;
+    grid-area: header;
+    display: flex;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    color: white;
+    font-size: 15px;
+    height: 100px;
+    align-items: center;
+    justify-content: center;
+}
